--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash": "^4.17.17",
     "bcrypt": "^6.0.0",
+    "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "fuse.js": "^7.1.0",
     "jose": "^6.0.11",
